--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "Protector CI Uruguaya",
+  "name": "CI Protegida Uruguay",
   "short_name": "CI Protegida",
   "start_url": ".",
   "display": "standalone",
@@ -9,13 +9,13 @@
   "icons": [
     {
       "src": "icon-192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
       "src": "icon-512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ]
 }
