--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 
 {
-  "name": "CI Protegida Uruguay",
-  "short_name": "CI Protegida",
+  "name": "Cuida tu Identidad",
+  "short_name": "CI",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
